# ccloud_game_rtc

./: .gitignore  CMakeLists.txt  CloudAgent.thrift  CloudRender.thrift  README.md  mediasoup.sln  mediasoup_lib.sln  rtc.sln
Tools/: install.sh
client/: CMakeLists.txt  cmd_click.c  desktop_capture.cc  desktop_capture.h  desktop_capture_source.cc  gl_renderer.cc  gl_renderer.h  glx_renderer.cc  glx_renderer.h  main.cc  main.cppppppp  video_renderer_linux.cc  xdotool.c
client/glad/: CMakeLists.txt  glad_egl.c
client/glad/include/glad/: glad.h
client/glad/src/: main.c
client/input_device/: CMakeLists.txt  README.md  cinput_device_hook.h  logger.c  logger.h  uiohook.h  xdo.c  xdotool.h
client/input_device/darwin/: input_helper.c  input_hook.c  post_event.c  system_properties.c
client/input_device/windows/: input_helper.c  input_hook.c  post_event.c  system_properties.c
client/input_device/x11/: input_helper.c  input_helper.h  input_hook.c  post_event.c  system_properties.c
client/linux_capture/: CMakeLists.txt  README.md  x11_window.c  xcompcap.cpp  xcomposite.c
client/nvcodec/: AppEncGL.cpp  CMakeLists.txt  Logger.h  NvCodecUtils.h  NvEncoder.cpp  NvEncoder.h  NvEncoderCLIOptions.h  NvEncoderGL.cpp  NvEncoderGL.h  cencoder_info.h  cnv_encoder.cpp  cnv_encoder.h  cnvenc.cpp  cnvenc.h  czero_copy.cpp  nvEncodeAPI.h
client/nvcodec/glad/include/glad/: glad.h
client/rtc/: casync_log.cpp  casync_log.h  ccapturer_tracksource.cpp  ccapturer_tracksource.h  ccfg.cpp  ccfg.h  cclient.cpp  cclient.h  cdesktop_capture.cpp  cdesktop_capture.h  cdevice.cpp  cgl_egl_common.cpp  cgl_egl_common.h  cgl_global.cpp  cgl_global.h  cinput_device.cpp  cinput_device.h  cinput_device_event.h  cint2str.cpp  clinux_capture.cpp  clinux_capture.h  clog.cpp  clog.h  clog_define.h  cmediasoup_mgr.cpp  cmediasoup_mgr.h  cnet_types.cpp  cnet_types.h  cosd_util.h  cproducer.h  cprotocol.h  crecv_transport.cpp  csend_transport.cpp  csend_transport.h  csession_description.h  ctime_api.h  ctransport.cpp  cvaapi_encode.cpp  cvaapi_encode.h  cwebscoket_connection.h  (+8 more)
client/sdp/: MediaSection.cpp  MediaSection.hpp  RemoteSdp.cpp  RemoteSdp.hpp  Utils.cpp  Utils.hpp
client/vaapi/: cvaapi_encode.h  loadsurface.h  va_display.c  va_display.h  va_display_android.cpp  va_display_drm.c  va_display_wayland.c  va_display_win32.cpp  va_display_x11.c
cx11_demo/: CMakeLists.txt  main.cpp  webrtc_window_x11.c
hook/: CMakeLists.txt  README.md
hook/cx11_demo/: CMakeLists.txt  README.md  get_processid.h  main.cpp  mouseclick  test_xsendevent.c  window.cpp  x11_get_window_id.cpp  x11_mouse.cpp
hook/hook_demo/: CMakeLists.txt  build.sh  main.c  prehook.c  run.sh
hook/input_device/: CMakeLists.txt  main.c
hook/x11_demo/: CMakeLists.txt  build.sh  main.c  run.sh
hook/xcb_demo/: CMakeLists.txt  main.c
hook/xlib_x11_window_keydown_mouse/: build.sh  main.c  run.sh
include/: crtc_media_mgr.h
inject/: CMakeLists.txt  README.md
inject/linux/: Makefile  inject-x86_64.c  sample-target.c
linux/: aCompile.sh  aOne.sh  build.sh  clear.sh  cloud_client.cfg  kill.sh  start.sh  sync_file.sh  watch.sh
mediasoup/: Broadcaster.cpp  Broadcaster.hpp  CMakeLists.txt  Consumer.cpp  Consumer.hpp  DataConsumer.cpp  DataConsumer.hpp  DataProducer.hpp  Device.cpp  Device.hpp  Handler.cpp  Handler.hpp  Logger.hpp  PeerConnection.cpp  PeerConnection.hpp  Producer.cpp  Producer.hpp  README.md  Transport.cpp  Transport.hpp  Utils.hpp  build_version.h  capture.cpp  capture.h  cassertion_macros.h  casync_log.cpp  casync_log.h  cbase64.cpp  cbase64.h  ccapturer_tracksource.cpp  ccapturer_tracksource.h  ccfg.cpp  ccfg.h  cclient.cpp  cclient.h  ccloud_rendering.cpp  ccloud_rendering.h  cconfig.cpp  cconfig.h  cdata_channel.cpp  (+94 more)
mediasoup/NvCodec/: encoder_info.h  nv_encoder.cc  nv_encoder.h  nvcodec_h264_encoder.cpp  nvcodec_h264_encoder.h  nvcodec_h264_encoder_cuda.cpp  nvenc.cpp  nvenc.h
mediasoup/NvCodec/NvEncoder/: NvEncoder.cpp  NvEncoder.h  NvEncoderCuda.cpp  NvEncoderCuda.h  NvEncoderD3D11.cpp  NvEncoderD3D11.h  NvEncoderD3D12.cpp  NvEncoderD3D12.h  NvEncoderD3D9.cpp  NvEncoderD3D9.h  NvEncoderGL.cpp  NvEncoderGL.h  NvEncoderOutputInVidMemCuda.cpp  NvEncoderOutputInVidMemCuda.h  NvEncoderOutputInVidMemD3D11.cpp  NvEncoderOutputInVidMemD3D11.h  nvEncodeAPI.h
mediasoup/NvCodec/Utils/: AppEncUtilsD3D11.h  NvEncoderCLIOptions.h
mediasoup/NvCodec/Utils/app/: AppEncUtils.h
mediasoup/VpuCodec/: cbm_vpu.cpp  cbm_vpu.h  cvpu_enc.cpp  cvpu_enc.h  cvpu_encoder.cpp  cvpu_encoder.h
mediasoup/sdp/: MediaSection.cpp  MediaSection.hpp  RemoteSdp.cpp  RemoteSdp.hpp  Utils.cpp  Utils.hpp
rtc/: CMakeLists.txt  cassertion_macros.h  casync_log.h  ccapturer_tracksource.h  cclient.cpp  cconfig.h  cdataconsumer.h  cdesktop_capture.cpp  cdevice.cpp  cinput_device.cpp  cinput_device_event.cpp  cinput_device_event.h  cint2str.cpp  client.cfg  clog_define.h  cow.ive  cproducer.cpp  cprotocol.h  csession_description.h  cwebsocket_mgr.h  cwebsocket_session.cpp  external_video_encoder_factory.cc  external_video_encoder_factory.h  mediasoup.vcxproj  mediasoup.vcxproj.filters  scalabilityMode.hpp  wsclient.cpp  wsclient.h
rtc/NvCodec/: nv_encoder.h  nvenc.cpp
rtc/NvCodec/NvDecoder/: NvDecoder.cpp
rtc/NvCodec/NvEncoder/: NvEncoder.cpp  NvEncoder.h  NvEncoderCuda.cpp  NvEncoderD3D9.cpp
rtc/sdp/: MediaSection.cpp  RemoteSdp.hpp  Utils.hpp
rtc_player/: build_version.bat  casync_log.cpp  cclient.cpp  cclient.h  cdevice.cpp  clog.cpp  clog.h  crecv_transport.cpp  crecv_transport.h  csend_transport.cpp  csend_transport.h  csingleton.h  ctransport.cpp  main.cpp  mediasoupclient.hpp  rtc_player.vcxproj  rtc_player.vcxproj.filters
rtc_player/sdp/: MediaSection.hpp
vaapi_demo/: CMakeLists.txt  h264encode.c  va_display.c
webrtc_demo/: CMakeLists.txt  main.cc
xcb_demo/: CMakeLists.txt  main.c
xinput/: README.md  build.sh  hook_xinput_api.c  run.sh
zero_copy/: CMakeLists.txt  NvEncoder.cpp  NvEncoderCLIOptions.h  NvEncoderGL.cpp  main.cpp  nvEncodeAPI.h
