project(cmeidasoup_client)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

MESSAGE(STATUS "#########################")
SET(CMAKE_BUILD_TYPE Release)


#ADD_DEFINITIONS(-std=c++11 -g -Wall -DUSE_AURA=1 -DNO_TCMALLOC -DFULL_SAFE_BROWSING -DSAFE_BROWSING_CSD -DSAFE_BROWSING_DB_LOCAL -DCHROMIUM_BUILD "-DCR_CLANG_REVISION=\"357692-1\"" -D_HAS_NODISCARD -D_HAS_EXCEPTIONS=0 -D__STD_C -D_CRT_RAND_S -D_CRT_SECURE_NO_DEPRECATE -D_SCL_SECURE_NO_DEPRECATE -D_ATL_NO_OPENGL -D_WINDOWS -DCERT_CHAIN_PARA_HAS_EXTRA_FIELDS -DPSAPI_VERSION=2 -DWIN32 -D_SECURE_ATL -D_USING_V110_SDK71_ -DWINAPI_FAMILY=WINAPI_FAMILY_DESKTOP_APP -DWIN32_LEAN_AND_MEAN -DNOMINMAX -D_UNICODE -DUNICODE -DNTDDI_VERSION=NTDDI_WIN10_RS2 -D_WIN32_WINNT=0x0A00 -DWINVER=0x0A00 -D_DEBUG -DDYNAMIC_ANNOTATIONS_ENABLED=1 -DWTF_USE_DYNAMIC_ANNOTATIONS=1 -D_HAS_ITERATOR_DEBUGGING=0 -DWEBRTC_ENABLE_PROTOBUF=1 -DWEBRTC_INCLUDE_INTERNAL_AUDIO_DEVICE -DRTC_ENABLE_VP9 -DHAVE_SCTP -DWEBRTC_USE_H264 -DWEBRTC_NON_STATIC_TRACE_EVENT_HANDLERS=1 -DWEBRTC_WIN -DABSL_ALLOCATOR_NOTHROW=1 -DHAVE_WEBRTC_VIDEO)


ADD_DEFINITIONS(-DUSE_AURA=1 -DNO_TCMALLOC -DFULL_SAFE_BROWSING -DSAFE_BROWSING_CSD -DSAFE_BROWSING_DB_LOCAL -DCHROMIUM_BUILD "-DCR_CLANG_REVISION=\"357692-1\"" -D_HAS_NODISCARD -D_HAS_EXCEPTIONS=0 -D__STD_C -D_CRT_RAND_S -D_CRT_SECURE_NO_DEPRECATE -D_SCL_SECURE_NO_DEPRECATE -D_ATL_NO_OPENGL -D_WINDOWS -DCERT_CHAIN_PARA_HAS_EXTRA_FIELDS -DPSAPI_VERSION=2 -DWIN32 -D_SECURE_ATL -D_USING_V110_SDK71_ -DWINAPI_FAMILY=WINAPI_FAMILY_DESKTOP_APP -DWIN32_LEAN_AND_MEAN -DNOMINMAX -D_UNICODE -DUNICODE -DNTDDI_VERSION=NTDDI_WIN10_RS2 -D_WIN32_WINNT=0x0A00 -DWINVER=0x0A00 -DNDEBUG -DNVALGRIND -DDYNAMIC_ANNOTATIONS_ENABLED=0 -DWEBRTC_ENABLE_PROTOBUF=1 -DWEBRTC_INCLUDE_INTERNAL_AUDIO_DEVICE -DRTC_ENABLE_VP9 -DHAVE_SCTP -DWEBRTC_USE_H264 -DWEBRTC_NON_STATIC_TRACE_EVENT_HANDLERS=1 -DWEBRTC_WIN -DABSL_ALLOCATOR_NOTHROW=1 -DHAVE_WEBRTC_VIDEO)
#SET(CMAKE_C_COMPILER "c:/Program Files/LLVM/bin/clang")
#SET(CMAKE_CXX_COMPILER "D:/Work/cmedia_server/webrtc_google/src/third_party/llvm-build/Release+Asserts/bin/clang-cl.exe")


SET(EXTRA_INC_DIR "D:/Work/cmedia_server/webrtc_google")

INCLUDE_DIRECTORIES( 
					${EXTRA_INC_DIR}/src/third_party/abseil-cpp
			 		${EXTRA_INC_DIR}/src
					${PROJECT_SOURCE_DIR}/cmediasoup
					${PROJECT_SOURCE_DIR}/cmediasoup/sdp
					
					)



#thread asio regex locale

LINK_DIRECTORIES(
				${PROJECT_SOURCE_DIR}/linux/lib
				${EXTRA_INC_DIR}/src/out/test_vs2017_debug
				)


SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/linux/lib )
add_subdirectory(cmediasoup)



